# rust-adb

./: .gitignore  Cargo.toml  README.md  log4rs.yml  rustfmt.toml
src/: lib.rs
src/adb/: adb.rs  adb_parse.rs  client.rs  device.rs  mod.rs
src/adb_device/: client.rs  device_get_features.rs  device_get_packages.rs  device_get_path.rs  device_get_properties.rs  device_get_status.rs  device_logcat.rs  device_reboot.rs  device_remount.rs  device_root.rs  device_shell_async.rs  device_shell_sync.rs  mod.rs
src/adb_host/: host_device_path.rs  host_device_status.rs  host_disconnect.rs  host_kill.rs  host_list_device.rs  host_list_device_l.rs  host_start.rs  host_track_devices.rs  host_transport.rs  host_version.rs  mod.rs  protocol.rs
src/adb_host/command/: basic_command.rs  basic_sync.rs  host_disconnect.rs  host_kill.rs  host_list_device.rs  host_list_device_l.rs  host_track_devices.rs  host_transport.rs  host_version.rs  mod.rs
src/basic/: connection.rs  mod.rs  protocol.rs
src/client/: adb_client.rs  device_client.rs  mod.rs  tests.rs
src/cmd/: adb_basic.rs  adb_devices.rs  adb_kill.rs  adb_track_device.rs  adb_version.rs  connection.rs  mod.rs
src/conn/: connection.rs  connection_tcp.rs  mod.rs  protocol.rs
src/error/: adb.rs  mod.rs
