[package]
name = "rust-adb"
version = "0.1.0"
edition = "2021"
authors = ["1027329813@qq.com"]
description = "for adb connection"
documentation = "https://github.com/WangZemin0816/rust-adb"
readme = "README.md"
homepage = "https://github.com/WangZemin0816/rust-adb"
license = "MIT OR Apache-2.0"

[dependencies]